fix: layout alignment fixes

--- a/src/components/layout/Layout.module.scss
+++ b/src/components/layout/Layout.module.scss
@@ -7,7 +7,7 @@
   border-radius: rem(20px);
   border: 1px solid var(--sec-border-color);
   background-color: var(--primary-bg);
-  height: calc(100vh - 150px);
+  min-height: calc(100vh - 150px);
   margin-top: rem(40px);
   display: flex;
   gap: rem(20px);
