--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,7 @@ body {
 }
 
 :root {
-  // color-scheme: light dark;
+  color-scheme: light dark;
   --body-bg: #CECECE;
   --primary-bg: #FFFFFF;
   --sec-bg: #f4f4f4;
